[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zreprt"
description = "ZAP-like reporting library"
readme = "README.md"
# https://choosealicense.com/
license = {file = "LICENSE"}
keywords = ["zap", "report"]

dynamic = ["version"]

# authors = [
#   { name="Vital A Pi", email="code@vp.ag" },
# ]
# maintainers = [
#   { name="Vital A Pi", email="code@vp.ag" },
# ]
# # https://pypi.org/classifiers
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

requires-python = ">=3.9"

dependencies = [
  "attrs",
  "cattrs",
  "python-dateutil",
]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# zreprt-cli = "spam:main_cli"

[tool.hatch.version]
path = "src/zreprt/__init__.py"
