[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zreprt"
description = "ZAP-like reporting library"
readme = "README.md"
license = {file = "LICENSE"}  # Keep in sync with classifiers/license!
keywords = ["zap", "report", "reporting"]

dynamic = ["version"]

authors = [
  { name="Vital A Pi", email="code@vp.ag" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",  # Keep in sync with project.license!
  "Operating System :: OS Independent",
]

requires-python = ">=3.9"

dependencies = [
  "attrs",
  "cattrs",
  "python-dateutil",
  "sarif-om",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[project.urls]
# Homepage = "https://github.com/dast-one/zreprt"
# Documentation = "https://github.com/dast-one/zreprt#readme"
Issues = "https://github.com/dast-one/zreprt/issues"
Source = "https://github.com/dast-one/zreprt"

[project.scripts]
zreprt = "zreprt.__main__:main"

[tool.hatch.version]
path = "src/zreprt/__init__.py"
